# recommend_site2

./: .gitignore  README.md  check_adult_content.py  check_system.py  complete_db_setup.py  debug_response_page_1.json  import_data.py  main.py  package-lock.json  package.json  pyproject.toml  quick_test.py  requests.json  responses.json  run_db_setup.py  setup_all.sh  temp.ipynb  temp.temp  tsconfig.json
ai/: fine_tune.py
crawl/: check_api.py  kakao_novel_crawl.py  login_test.py  munpia_novel_crawl.py  naver_novel_crawl.py  naver_novel_crawl2.py  novelpia_novel_crawl.py
process/: img_download.py  insert_mysql.py  preprocessing.py
site/my-app/: QUICKSTART.md  add_sample_data.py  check_content_data.py  check_table_structure.py  clear_dummy_data.py  fix_registration.py  fix_table_nullable.py  next.config.ts  package-lock.json  package.json  quick_db_test.js  setup.sh  setup_fix.sh  test_db.py
site/my-app/app/: layout.tsx  page.tsx
site/my-app/components/: adult-verification-modal.tsx  content-grid.tsx  content-modal.tsx  filter-bar.tsx  header.tsx  protected-route.tsx  sort-dropdown.tsx  tag-selector.tsx  user-settings-modal.tsx
site/my-app/hooks/: use-contents.ts  use-infinite-contents.ts  use-infinite-scroll.ts
site/my-app/scripts/: create-database.sql  init_database.py  insert_data.py  sample_novels.json  sample_webtoons.json  seed-data.sql  update-database-adult.sql
src/components/: Welcome.astro  header.astro  link.tsx  user_icon_menu.tsx
src/components/ui/: nav.tsx
src/layouts/: Layout.astro
src/lib/: auth-context.tsx
src/pages/: index.astro
(+33 files in other folders)
